fix(chatbox): overflow for welcome screen

--- a/theme/style.css
+++ b/theme/style.css
@@ -820,6 +820,7 @@ margin: 3px;
     float:left;
     outline: 1px solid black;
     font-size: 10px;
+    overflow: hidden;
 }
 
 .ib-chatbox {
